Fixes for chat card collapsing

--- a/display/ui/styling/chat.less
+++ b/display/ui/styling/chat.less
@@ -31,13 +31,7 @@
 
     .dice-icons {
       display: flex;
-      flex-flow: row;
-    }
-
-    .dice-tooltip {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.2s ease-out;
+      flex-flow: wrap;
     }
   }
 
